@@ -7,7 +7,7 @@
  */
 class Peak_Chrono
 {
-    
+
     /**
      * Global timer, used by default if not timer name is specified
      * @var array
@@ -28,11 +28,9 @@ class Peak_Chrono
     public static function start($timer_name = null)
     {
         if(!isset($timer_name)) {
-            self::$_global['start'] = self::getMicrotime();
+            self::$_global = array('start' => self::getMicrotime(), 'end' => false);      
         }
-        else {
-            self::$_timers[$timer_name] = array('start' => self::getMicrotime(), 'end' => false);
-        }
+        else self::$_timers[$timer_name] = array('start' => self::getMicrotime(), 'end' => false);
     }
 
     /**
@@ -41,15 +39,11 @@ class Peak_Chrono
      * @param string|null timer name
      */
     public static function stop($timer_name = null)
-    {
-        if(!isset($timer_name)) {
-            self::$_global['end'] = self::getMicrotime();
+    {       
+        if(self::timerExists($timer_name)) {
+            self::$_timers[$timer_name]['end'] = self::getMicrotime();
         }
-        else {
-            if(self::timerExists($timer_name)) {
-                self::$_timers[$timer_name]['end'] = self::getMicrotime();
-            }
-        }
+        else self::$_global['end'] = self::getMicrotime();     
     }
     
     /**
@@ -64,26 +58,44 @@ class Peak_Chrono
     }
     
     /**
-     * Check if chrono is started
+     * Check if chrono is started but not ended
      *
      * @return bool
      */
     public static function isOn($timer_name = null)
     {
         if(!isset($timer_name)) {
-            if(self::$_global['start'] === false) return false;
+            if((self::$_global['start'] === false) || (self::$_global['end'] !== false)) return false;
             else return true;
         }
         else {
             if(self::timerExists($timer_name)) {
-                if(array_key_exists('start', self::$_timers[$timer_name])) {
-                    if(self::$_timers[$timer_name]['start'] !== false) return true;
-                    else return false;
-                }
-                return false;
+                if((self::$_timers[$timer_name]['start'] === false) || (self::$_timers[$timer_name]['end'] !== false)) return false;
+                else return true;
             }
             return false;
         }   
+    }
+    
+    /**
+     * Check if a timer is completed (started and ended)
+     *
+     * @param  string|null $timer_name
+     * @return bool
+     */
+    public static function isCompleted($timer_name = null)
+    {
+        if(!isset($timer_name)) {
+            if((self::$_global['start'] !== false) && (self::$_global['end'] !== false)) return true;
+            else return false;
+        }
+        else {
+           if(self::timerExists($timer_name)) {
+               if((self::$_timers[$timer_name]['start'] !== false) && (self::$_timers[$timer_name]['end'] !== false)) return true;
+               else return false;
+           }
+           else return false;
+        } 
     }
 
     /**
@@ -99,28 +111,71 @@ class Peak_Chrono
     /**
      * Stop chrono if not ended and return the time elapsed in seconds
      *
-     * @param  integer $round
-     * @return integer
+     * @param  string|null   $timer_name
+     * @param  integer       $decimal_precision
+     * @return integer|false return false if timer do not exists or it is not valid
      */
     public static function get($timer_name = null, $decimal_precision = 2)
     {
+        if(self::isOn($timer_name)) self::stop($timer_name);
 
-        if(self::isOn($timer_name)) {
-            
+        if(self::isCompleted($timer_name)) {
             if(self::timerExists($timer_name)) {
-                if(self::$_timers[$timer_name]['end'] === false) self::stop($timer_name);
-                $end   = self::$_timers[$timer_name]['end'];
-                $start = self::$_timers[$timer_name]['start'];
+                $time_elapsed = self::_elapsed(self::$_timers[$timer_name]);
             }
             else {
-                if(self::$_global['end'] === false) self::stop();
-                $end   = self::$_global['end'];
-                $start = self::$_global['start'];
+                $time_elapsed = self::_elapsed(self::$_global);
             }
-            return round(($end - $start), $decimal_precision);
-            
+            return round(($time_elapsed), $decimal_precision);
+        }        
+        else return false;
+    }
+    
+    /**
+     * Same as get() but return timer in microseconds
+     *
+     * @see get()
+     */
+    public static function getMS($timer_name = null, $decimal_precision = 4)
+    {
+        $sec = self::get($timer_name, $decimal_precision);
+        if($sec === false) return false;
+        
+        return $sec * 1000;      
+    }
+    
+        
+    /**
+     * Reset global timer or a specific timer
+     *
+     * @param string|null $timer_name
+     */
+    public static function reset($timer_name = null)
+    {
+        if(isset($timer_name)) {
+            if(self::timerExists($timer_name)) unset(self::$_timers[$timer_name]);
         }
-        else return null;
+        else self::$_global = array('start' => false, 'end' => false);  
+    }
+    
+    /**
+     * Reset all timers
+     */
+    public static function resetAll()
+    {
+        self::reset();
+        self::$_timers = array();
+    }
+    
+    /**
+     * Calculate the difference between microtime(s) values
+     *
+     * @param  array $timer_array
+     * @return integer
+     */
+    private static function _elapsed($timer_array)
+    {
+        return ($timer_array['end'] - $timer_array['start']);
     }
 
 }
